--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
             <div class="footer-content">
                 <p>&copy; 2024 Vikas. All rights reserved.</p>
                 <div class="social-links">
-                    <a href="#"><i class="fab fa-github"></i></a>
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/Vikasbablad"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/vikas-bablad"><i class="fab fa-linkedin"></i></a>
                     <a href="#"><i class="fab fa-twitter"></i></a>
                 </div>
             </div>
