--- a/index.html
+++ b/index.html
@@ -223,6 +223,36 @@
         </div>
     </section>
 
+    <!-- Certificate Section -->
+    <section id="certificates" class="certificates">
+        <div class="container">
+            <h2 class="section-title">Certificates</h2>
+            <div class="certificates-grid">
+                <div class="certificate-card">
+                    <div class="certificate-icon">
+                        <i class="fas fa-certificate"></i>
+                    </div>
+                    <div class="certificate-content">
+                        <h3>Java Full Stack Development</h3>
+                        <p>Doing At Tap Academy, BTM Layout</p>
+                        <span class="certificate-date">June 2024</span>
+                    </div>
+                </div>
+                <div class="certificate-card">
+                    <div class="certificate-icon">
+                        <i class="fas fa-certificate"></i>
+                    </div>
+                    <div class="certificate-content">
+                        <h3>Internship</h3>
+                        <p>Completed from VK River private limited</p>
+                        <span class="certificate-date">March 2024</span>
+                    </div>
+                </div>
+               
+            </div>
+        </div>
+    </section>
+
     <!-- Contact Section -->
     <section id="contact" class="contact">
         <div class="container">
