--- a/index.html
+++ b/index.html
@@ -148,6 +148,16 @@
                             <i class="fab fa-java"></i>
                             <span>Java</span>
                         </div>
+
+                        <div class="skill-item" data-skill="Java">
+                            <i class="fab fa-java"></i>
+                            <span>JEE</span>
+                        </div>
+
+                          <div class="skill-item" data-skill="Java">
+                            <i class="fab fa-java"></i>
+                            <span>JDBC</span>
+                        </div>
                         
                         
                         <div class="skill-item" data-skill="Flask">
