--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
-                                <a href="#" class="project-link"><i class="fab fa-github"></i></a>
+                                <a href="https://employee-leave-management-kalaburagi.netlify.app/" class="project-link"><i class="fab fa-github"></i></a>
                             </div>
                         </div>
                     </div>
