--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     <div class="project-image">
                         <div class="project-overlay">
                             <div class="project-links">
-                                <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
+                                <a href="https://employee-leave-management-kalaburagi.netlify.app/" class="project-link"><i class="fas fa-external-link-alt"></i></a>
                                 <a href="#" class="project-link"><i class="fab fa-github"></i></a>
                             </div>
                         </div>
