Update project technologies in index.html

--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
                         <h3>Employee Leave Management System</h3>
                         <p>Web application to manage employee leave requests, approvals, and tracking.</p>
                         <div class="project-tech">
-                            <span>Java</span>
-                            <span>Spring Boot</span>
-                            <span>MySQL</span>
+                            <span>HTML</span>
+                            <span>CSS</span>
+                            <span>Javascript</span>
                         </div>
                     </div>
                 </div>
